# gimp-wedding-invite-template

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  tui.py
.github/workflows/: ci.yml
assets/kids/: README.md
config/: invite.yaml  layout.yaml
modules/wedding-bridesmaid/: build.py  content.yaml  layout.yaml
modules/wedding-bridesmaid-invite/: build.py  content.yaml  layout.yaml
modules/wedding-bridesmaid-invite/template/: template_externo.xcf  template_interno.xcf
modules/wedding-couple-invite/: build.py  content.yaml  layout.yaml
modules/wedding-groomsman-invite/: build.py  content.yaml  layout.yaml
modules/wedding-invite/: build.py  content.yaml  layout.yaml
modules/wedding-juniors/: build.py  content.yaml  layout.yaml
modules/wedding-menu/: README.md
modules/wedding-pages/: build.py  content.yaml  layout.yaml
modules/wedding-pages-invite/: README.md
modules/wedding-sponsors/: build.py  content.yaml  layout.yaml
src/: a4_impose.py  a4_render.py  borders.py  bridal_party_blocks.py  build.py  calendar_panel.py  document.py  manuals.py  module_runner.py  palette.py  panels.py  paper.py  sides.py  text_utils.py  texts.py  trifold_blocks.py
tests/: _modules.py  conftest.py  test_a4_impose.py  test_e2e.py  test_e2e_headless.py  test_panels.py  test_paper.py  test_structure.py  test_tui.py
tools/: canva_scrape.py  crop_logo.py  export_pdf.py  export_pdf_a4.py  export_png.py  inspect_xcf.py  install_fonts.ps1  yaml_to_json.py
(+26 files in other folders)
